--- a/html/about.html
+++ b/html/about.html
@@ -27,7 +27,7 @@
             <h3>Emmanuel.net</h3>
 
             <ul class="nav-links" id="nav-links">
-                <li><a href="/html/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="/html/about.html" class="active">About</a></li>
                 <li><a href="/html/projects.html">Projects</a></li>
                 <li><a href="/html/contact.html">Contact</a></li>
